# ev-charaka

./: .gitignore  LICENSE.md  README.md  setup.cfg
.github/workflows/: test.yml
data/: cars.csv  chargers.csv
script/: scrape_routing.js
src/evcharaka/: entity.py  plan.py  util.py
src/evcharaka/data/: cars.csv  chargers.csv
test/: conftest.py  test_entity.py  test_plan.py  test_utils.py
