[metadata]
name = evcharaka
version = attr: evcharaka.VERSION
description = Generic ev trip planner
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/sh1457/ev-charaka
author = Sujith Sudarshan
author_email = sh1457@gmail.com
license = MIT
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/sh1457/ev-charaka

[options]
zip_safe = False
package_dir=
    =src
packages = find_namespace:
platforms = any
include_package_data = True
install_requires =
    pandas
python_requires = >=3.11

[options.package_data]
evcharaka.data =
    *.csv

# [options.entry_points]
# console_scripts =
#    seed = evtrip.__main__:main

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    evcharaka.tests*

[options.extras_require]
dev =
    pytest
    pytest-cov
    coverage
    black
    mypy
    build